@@ -218,8 +218,8 @@ test('mceInsertContent - legacy content', function() {
 	rng.setStart(editor.dom.select('p')[0].firstChild, 0);
 	rng.setEnd(editor.dom.select('p')[0].firstChild, 1);
 	editor.selection.setRng(rng);
-	editor.execCommand('mceInsertContent', false, '<u>u</u><strike>strike</strike><font size="7">font</font>');
-	equal(editor.getContent(), '<p><span style="text-decoration: underline;">u</span><span style="text-decoration: line-through;">strike</span><span style="font-size: 300%;">font</span></p>');
+	editor.execCommand('mceInsertContent', false, '<strike>strike</strike><font size="7">font</font>');
+	equal(editor.getContent(), '<p><span style="text-decoration: line-through;">strike</span><span style="font-size: 300%;">font</span></p>');
 });
 
 test('mceInsertContent - hr', function() {
@@ -375,7 +375,6 @@ test('Justify - multiple block elements selected - queryCommandState', function(
 });
 
 test('Formatting commands (xhtmlTextStyles)', function() {
-	expect(19);
 	editor.focus();
 	editor.setContent('test 123');
 	editor.execCommand('SelectAll');
@@ -428,9 +427,6 @@ test('Formatting commands (xhtmlTextStyles)', function() {
 
 	editor.setContent('<p><span style="font-size: xx-large;">test 123</span></p>');
 	equal(editor.getContent(), '<p><span style="font-size: xx-large;">test 123</span></p>');
-
-	editor.setContent('<p><u>test 123</u></p>');
-	equal(editor.getContent(), '<p><span style="text-decoration: underline;">test 123</span></p>');
 
 	editor.setContent('<p><strike>test 123</strike></p>');
 	equal(editor.getContent(), '<p><span style="text-decoration: line-through;">test 123</span></p>');
