@@ -38,6 +38,7 @@ Version 4.1.8 (2014-12-xx)
 	Fixed so the max length of the width/height input fields of the media dialog is 5 instead of 3.
 	Fixed so drag/dropped contents gets properly processed by paste plugin since it's basically a paste. Patch contributed by Greg Fairbanks.
 	Fixed so shortcut keys for headers is ctrl+alt+[1-9] instead of ctrl+[1-9] since these are for switching tabs in the browsers.
+	Fixed so "u" doesn't get converted into a span element by the legacy input filter. Since this is now a valid HTML5 element.
 	Fixed font families in order to provide appropriate web-safe fonts.
 Version 4.1.7 (2014-11-27)
 	Added HTML5 schema support for srcset, source and picture. Patch contributed by mattheu.
